--- a/assets/templates/partials/search-pagination.tmpl
+++ b/assets/templates/partials/search-pagination.tmpl
@@ -5,7 +5,7 @@
 <form id="js-pagination-container" class="js-auto-submit__form">
     {{ if ne .Data.Response.Count 0 }}
         <nav class="ons-pagination " arial-label="Pagination (Page {{$pagination.CurrentPage}} of {{$pagination.TotalPages}})">
-            <div class="ons-pagination__position">Page {{$pagination.CurrentPage}} of {{$pagination.TotalPages}}</div>
+            <div class="ons-pagination__position ons-u-mb-s">Page {{$pagination.CurrentPage}} of {{$pagination.TotalPages}}</div>
             <ul class="ons-pagination__items">
                 {{ $prevURL := "" }}
                 {{ $nextURL := "" }}
