--- a/assets/templates/partials/filter.tmpl
+++ b/assets/templates/partials/filter.tmpl
@@ -6,6 +6,7 @@
 {{ $lang := .Language }}
 {{ $population_types := .Data.PopulationTypeFilter}}
 {{ $dimensions := .Data.DimensionsFilter}}
+
 <div id="accordion" class="ons-accordion">
     <form id="topicsFilterForm" method="get" class="js-auto-submit__form">
         <input type="hidden" name="q" value="{{ $query }}"/>
@@ -70,18 +71,7 @@
                     {{ end }}
             </fieldset>
             <noscript>
-                <button type="submit"
-
-
-
-
-
-
-
-
-    @@ -90,52 +92,53 @@
-
-                        class="ons-btn ons-btn--primary margin-top-sm--2 margin-top-md--2 js-submit-button">
+                <button type="submit" class="ons-btn ons-btn--primary margin-top-sm--2 margin-top-md--2 js-submit-button">
                         <span class="ons-btn__inner"><span class="ons-btn__text">Filter</span></span>
                 </button>
             </noscript>
@@ -100,7 +90,7 @@
                         {{ template "icons/chevron-right" }}
                     </span>
                 </summary>
-                <fieldset id="collapsible-content" class="ons-collapsible__content ons-js-details-content ons-u-mb-s">
+                <fieldset class="ons-collapsible__content ons-js-details-content ons-u-mb-s">
                     <legend class="ons-u-vh">{{ localise "SelectContentType" $lang 1 }}</legend>
                         {{ range $index, $topFilter := $filters}}
                             <div class="ons-checkboxes__items">
@@ -150,16 +140,6 @@
                 <noscript>
                     <button type="submit"
                             class="ons-btn ons-btn--primary margin-top-sm--2 margin-top-md--2 js-submit-button">
-
-
-
-
-
-
-
-
-
-
                             <span class="ons-btn__inner"><span class="ons-btn__text">Filter</span></span>
                     </button>
                 </noscript>
@@ -182,7 +162,7 @@
                         {{ template "icons/chevron-right" }}
                     </span>
                 </summary>
-                <div id="collapsible-content" class="ons-collapsible__content ons-js-details-content ons-u-mb-s">
+                <div class="ons-collapsible__content ons-js-details-content ons-u-mb-s">
                     {{ range $index, $filter := $value }}
                     <div class="ons-checkboxes__items">
                         <span class="ons-checkboxes__item ons-checkboxes__item--no-border">
@@ -190,7 +170,7 @@
                                 <input type="checkbox" id="{{ $key }}-group-{{ $index }}"
                                     class="ons-checkbox__input ons-js-checkbox"
                                     name="{{ $key }}"
-                                    value="{{ print $filter.Type }}" aria-controls="{{ $key }}-group-{{ $index }}-other-wrap"
+                                    value="{{ print $filter.Type }}"
                                     data-gtm-label="{{ $filter.Type }}"
                                     {{ if $filter.IsChecked }}
                                         checked
@@ -229,7 +209,7 @@
                         {{ template "icons/chevron-right" }}
                     </span>
                 </summary>
-                <div id="collapsible-content" class="ons-collapsible__content ons-js-details-content ons-u-mb-s">
+                <div class="ons-collapsible__content ons-js-details-content ons-u-mb-s">
                     {{ range $index, $filter := $value }}
                     <div class="ons-checkboxes__items">
                         <span class="ons-checkboxes__item ons-checkboxes__item--no-border">
@@ -237,7 +217,7 @@
                                 <input type="checkbox" id="{{ $key }}-group-{{ $index }}"
                                     class="ons-checkbox__input ons-js-checkbox"
                                     name="{{ $key }}"
-                                    value="{{ print $filter.Type }}" aria-controls="{{ $key }}-group-{{ $index }}-other-wrap"
+                                    value="{{ print $filter.Type }}"
                                     data-gtm-label="{{ $filter.Type }}"
                                     {{ if $filter.IsChecked }}
                                         checked
