remove sixteens classes to prevent sixteens icon appearing

--- a/assets/templates/partials/standalone-search.tmpl
+++ b/assets/templates/partials/standalone-search.tmpl
@@ -9,7 +9,7 @@
         value="">
     <button type="submit" class="search__button search__button--no-results" id="search-in-page-submit">
         <span class="visuallyhidden">{{ localise "Search" .Language 1 }}</span>
-        <span class="icon icon-search--light">
+        <span>
             {{ template "icons/search" . }}
         </span>
     </button>
