adds the pages and filters
Signed-off-by: lindenmckenzie <linden.mckenzie@ons.gov.uk>

--- a/assets/templates/partials/testresults.tmpl
+++ b/assets/templates/partials/testresults.tmpl
@@ -43,7 +43,7 @@
                     </p>
                 {{ else }}
                     <p class="search__results__meta font-size--16">
-                        <b>{{ localise "ReleasedOn" $lang 1 }}:</b> {{ .Description}}
+                        <b>{{ localise "ReleasedOn" $lang 1 }}:</b>
                         |
                         <b>{{ localise .Type.LocaliseKeyName $lang 1 }}</b>
                     </p>
