--- a/assets/templates/all-adhocs.tmpl
+++ b/assets/templates/all-adhocs.tmpl
@@ -1,15 +1,26 @@
 {{ $lang := .Language }}
 <div class="ons-container search__container">
   <div class="ons-grid">
+    <!-- <h3>Terrrrr</h3> -->
+    <div class="ons-grid__col ons-col-12@m">
+      <section class="search__summary">
+        <span class="search__summary__generic">
+        {{ localise "UserRequestedData" $lang 1 }}
+        </span>
+      </section>
+     
+      <!-- {{ template "partials/standalone-search" . }} -->
+    </div>
 
+    
     {{if .Data.ErrorMessage}}
 
-      <div class="ons-grid__col ons-col-12@m">
+      <!-- <div class="ons-grid__col ons-col-12@m">
         <section class="search__summary">
           <span class="search__summary__generic">{{ localise "EnterSearchTerm" $lang 1 }}</span>
         </section>
         {{ template "partials/standalone-search" . }}
-      </div>
+      </div> -->
 
     {{else if eq .Data.Response.Count 0}}
       <div class="ons-grid__col ons-col-12@m">
@@ -24,12 +35,6 @@
 
     {{else}}
 
-      <div class="ons-grid__col ons-col-12@m">
-        <section class="search__summary" role="contentinfo" aria-label="Search summary">
-          {{ template "partials/summary" . }}
-        </section>
-      </div>
-
       <div class="ons-grid__col ons-col-4@m">
         <section class="search__filter" role="contentinfo" aria-label="Search filtering" id="search-filter">
           <div class="search__filter__heading">
@@ -38,7 +43,12 @@
             </h3>
             <a href="?{{ if .Data.Query }}q={{ .Data.Query}}{{end}}" id="clear-search" class="float-right font-size--18">{{ localise "ClearAll" $lang 1 }}</a>
           </div>
-         
+          <div class="search__filter__content">
+            {{ template "partials/filter-results" }}
+          </div>
+          <div class="search__filter__content">
+            {{ template "partials/archived-release-message" . }}
+          </div>
         </section>
       </div>
 
@@ -56,7 +66,7 @@
               </button>
           </div>
           <div class="search__results">
-            {{ template "partials/results" . }}
+            {{ template "partials/testresults" . }}
           </div>
           <div class="search__pagination">
             {{ template "partials/search-pagination" . }}
@@ -64,6 +74,5 @@
         </section>
       </div>
     {{end}}
-
   </div>
 </div>
