--- a/assets/templates/partials/testresults.tmpl
+++ b/assets/templates/partials/testresults.tmpl
@@ -43,7 +43,7 @@
                     </p>
                 {{ else }}
                     <p class="search__results__meta font-size--16">
-                        <b>{{ localise "ReleasedOn" $lang 1 }}:</b>
+                        <b>{{ localise "ReleasedOn" $lang 1 }}:</b> {{ dateFormat .Description.ReleaseDate }}
                         |
                         <b>{{ localise .Type.LocaliseKeyName $lang 1 }}</b>
                     </p>
