--- a/assets/templates/partials/filter-results.tmpl
+++ b/assets/templates/partials/filter-results.tmpl
@@ -2,6 +2,10 @@
 {{ $enabledFilters := .Data.EnabledFilters }}
 {{ $dataFilterEnabled := .Data.DataFilterEnabled }}
 {{ $filters := .Data.Filters }}
+{{ $topicFilters := .Data.TopicFilters }}
+{{ $query := .Data.Query }}
+{{ $sort := .Data.Sort.Query }}
+
 
 <div id="accordion" class="ons-accordion">
     {{ range $index, $enabledFilter := $enabledFilters }}
@@ -75,32 +79,69 @@
     </details>
     {{end}}
 
-    {{if eq $enabledFilter "topic-filter"}} 
-    <details class="ons-collapsible ons-js-collapsible ons-collapsible--accordion" data-group="accordion" data-btn-close="Hide this" data-open="true">
-        <summary class="ons-collapsible__heading ons-js-collapsible-heading">
-            <h2 class="ons-collapsible__title">
-                <legend class="block">
-                    Topics
-                </legend>
-            </h2>
-            <span class="ons-collapsible__icon">
-                {{ template "icons/chevron-right" }}
-            </span>
-        </summary>
-        <fieldset class="ons-collapsible__content ons-js-details-content ons-u-mb-s">
-            <div class="tiles__item tiles__item--nav-type flush-col hide--sm print--hide">
-                <div class="tiles__content tiles__content--nav">
-                    <label class="hidden" for="topic-select">
-                        <strong>Topics</strong>
-                    </label>
-                    <select id="topic-select" name="topic-select" class="ons-input ons-input--select ons-input--block">
-                        <option value="select" selected>Select topic</option>
-                        <option value="today">Example topic</option>
-                    </select>
-                </div>
-            </div>
-        </fieldset>
-    </details>
+    {{if eq $enabledFilter "topic-filter" }} 
+        {{if $topicFilters}}
+        <details class="ons-collapsible ons-js-collapsible ons-collapsible--accordion" data-group="accordion" data-btn-close="Hide this" data-open="true">
+            <summary class="ons-collapsible__heading ons-js-collapsible-heading">
+                <h2 class="ons-collapsible__title">
+                    <legend class="block">
+                        {{ localise "Topic" $lang 4 }}
+                    </legend>
+                </h2>
+                <span class="ons-collapsible__icon">
+                    {{ template "icons/chevron-right" }}
+                </span>
+            </summary>
+            <fieldset class="ons-fieldset">
+                <legend class="ons-u-vh">{{ localise "CensusTopic" $lang 1 }}</legend>
+                    {{ range $index, $topicFilter := $topicFilters }}
+                        <div class="ons-checkboxes__items">
+                            <span class="ons-checkboxes__item ons-checkboxes__item--no-border">
+                                <span class="ons-checkbox ons-checkbox--no-border topic-filter">
+                                    <input type="checkbox" id="topic-group-{{ $index }}"
+                                        class="ons-checkbox__input ons-js-checkbox"
+                                        name="topics"
+                                        value="{{ print $topicFilter.Query }}" aria-controls="topic-group-{{ $index }}-other-wrap"
+                                        data-gtm-label="{{ $topicFilter.LocaliseKeyName }}"
+                                        {{ if $topicFilter.IsChecked }}
+                                            checked
+                                        {{ end }}
+                                    >
+                                    <label class="ons-checkbox__label" for="topic-group-{{ $index }}" id="topic-group-{{ $index }}-label">
+                                        {{ localise $topicFilter.LocaliseKeyName $lang 4 }}
+                                    </label>
+                                    <span class="ons-checkbox__other" id="topic-group-{{ $index }}-other-wrap">
+                                        <fieldset class="ons-fieldset ons-js-other-fieldset">
+                                            <legend class="ons-u-vh">{{ localise "CensusSubTopics" $lang 4}}</legend>
+                                                {{ range $index, $childFilter := $topicFilter.Types }}
+                                                    {{ $id := $childFilter.Query }}
+                                                    <div class="ons-checkboxes__items">
+                                                        <span class="ons-checkboxes__item ons-checkboxes__item--no-border">
+                                                            <span class="ons-checkbox ons-checkbox--no-border child-filter">
+                                                                <input id="{{ $id }}"
+                                                                    class="ons-checkbox__input ons-js-checkbox"
+                                                                    type="checkbox" name="topics"
+                                                                    {{ if $childFilter.IsChecked }}checked{{ end }}
+                                                                    data-gtm-label="{{ $childFilter.LocaliseKeyName }}"
+                                                                    value="{{ $id }}"
+                                                                />
+                                                                <label class="ons-checkbox__label" for="{{ $id }}"
+                                                                    id="{{ $id }}-label">
+                                                                    {{ $childFilter.LocaliseKeyName }} ({{ $childFilter.NumberOfResults }})
+                                                                </label>
+                                                            </span>
+                                                        </span>
+                                                    </div>
+                                                {{ end }}
+                                        </fieldset>
+                                    </span>
+                                </span>
+                            </span>
+                        </div>
+                    {{ end }}
+            </fieldset>
+        </details>
+        {{end}}
     {{end}}
     {{if eq $enabledFilter "content-type"}} 
         {{ if $filters }}
